# minecraft-webxr

./: .gitignore  CHARACTER_SYSTEM_SUMMARY.md  Cargo.toml  GENDER_SUPPORT.md  LICENSE  README.md  TOGGLE_DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json  init.sh
.github/workflows/: deploy-prod.yml  deploy-staging.yml  deploy.yml  playwright.yml  server-build-prod.yml  server-build-staging.yml
docs/: CHANGELOG.md  INDEX.md  README.md  _config.yml  architecture.md  avatar-physics.md  blocks-items-crafting.md  central-join-ticket.md  character-svg-export.md  character-system.md  config.yml  controls.md  gameplay-interactions.md  installation-build.md  mods.md  pwa-assets.md  rendering-and-effects.md  runtime-flow.md  world-generation.md
docs/_layouts/: default.html
docs/game-guide/: README.md  blocks.md  controls.md  crafts.md  items.md
docs/technical/: mods.md
mods/example-client-mod/: mod.json
public/: cgu.html  manifest.webmanifest
public/.well-known/: assetlinks.json
scripts/: generate-doc-textures.mjs
server/: .env exemple  Cargo.toml  README.md
server/migrations/0001_create_player_sessions/: down.sql  up.sql
server/src/: main.rs  mods.rs  mods_http.rs  protocol.rs  state.rs  stats.rs  ws_auth.rs
src/: auth-client.ts  auth-refresh-client.ts  avatar-cache.ts  block-atlas.ts  block-breaking-sprite.ts  block-breaking.ts  block-model-loader.ts  boot.ts  central-join-ticket.ts  central-presence-client.ts  constants.ts  crafting-ui.ts  events.ts  fullscreen.ts  functions.ts  ingame-menu.ts  inventory-ui.ts  loading-screen.ts  main-menu.ts  main.ts  mobile-controls.ts  multiplayer-client.ts  multiplayer-world-sync.ts  options-menu.ts  pointed-block-label.ts  poppy-models.ts  remote-player-appearance.ts  remote-player-sync.ts  solo-spawn-characters.ts  steve-animator.ts  steve-character.ts  steve-color-matrices.ts  style.css  textured-world.ts  tree-decay.ts  types.ts  ui-state.ts  vr-crafting-ui.ts  vr-hand-inventory-ui.ts  vr-menu-chalet.ts  (+3 more)
src/block-textures/: dirt.ts  grass.ts  index.ts  types.ts
src/blocks/: decorative-blocks.ts  index.ts  natural-blocks.ts  ore-blocks.ts  plant-blocks.ts  stone-blocks.ts  terrain-blocks.ts  tree-blocks.ts  types.ts  wool-blocks.ts
src/character-builder/: BODY_TYPES.md  README.md  animator.ts  avatar-physics.ts  body-templates.ts  character-builder.ts  character-factory.ts  index.ts  mesh-builder.ts  svg-export.ts  texture-builder.ts  types.ts
src/characters/: alex-animations.ts  alex-color-matrices.ts  alex-model.ts  alex.ts  avatar-physics.ts  examples.ts  index.ts  steve.ts  (+3 more)
wasm/: Cargo.toml
wasm/src/: lib.rs  tests.rs
(+25 files in other folders)
