[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2024"
description = "Serveur multijoueur autoritaire pour Minecraft WebXR"
repository = "https://github.com/nicolachoquet06250/minecraft-webxr.git"
license = "MIT"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "json", "http1", "tokio"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
