[package]
name = "voxicraft_server"
version = "0.2.0"
edition = "2024"
description = "Serveur multijoueur autoritaire pour Voxicraft"
repository = "https://github.com/nicolachoquet06250/minecraft-webxr.git"
license = "MIT"

[features]
default = []
embed_front = ["dep:include_dir", "dep:mime_guess"]

[dependencies]
axum = { version = "0.8.6", features = ["ws", "json", "http1", "tokio"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
futures = "0.3.31"
include_dir = { version = "0.7.4", optional = true }
mime_guess = { version = "2.0.5", optional = true }
rcgen = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
voxel_wasm = { path = "../wasm" }
