[package]
name = "voxel_wasm"
description = "Lib webassembly pour gérer les parties lourdes en calcule du jeu"
repository = "https://github.com/nicolachoquet06250/minecraft-webxr.git"
version = "0.1.0"
edition = "2024"

[dependencies]
noise = "0.9.0"
wasm-bindgen = "0.2.122"

[lib]
crate-type = ["cdylib", "rlib"]
# Caused by: crate-type must be cdylib to compile to WebAssembly. Add the following to your Cargo.toml file:
